[gd_scene format=3 uid="uid://da2g8wy6g4fky"]

[ext_resource type="Script" uid="uid://c8su1qp12tm63" path="res://scripts/CommandSlot.gd" id="1_wbfu4"]
[ext_resource type="Script" uid="uid://b6jbs8g6nrgnj" path="res://scripts/Game.gd" id="1_xkndl"]

[sub_resource type="StyleBoxFlat" id="go_normal"]
bg_color = Color(0.298, 0.686, 0.314, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
content_margin_left = 24.0
content_margin_top = 12.0
content_margin_right = 24.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="go_hover"]
bg_color = Color(0.4, 0.733, 0.416, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
content_margin_left = 24.0
content_margin_top = 12.0
content_margin_right = 24.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="go_pressed"]
bg_color = Color(0.22, 0.557, 0.235, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
content_margin_left = 24.0
content_margin_top = 12.0
content_margin_right = 24.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="slot_panel"]
bg_color = Color(1.0, 0.953, 0.878, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1.0, 0.718, 0.302, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Game" type="Control" unique_id=1650470966]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xkndl")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="Layout" type="VBoxContainer" parent="ScrollContainer" unique_id=2035657044]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="MenuBar" type="HBoxContainer" parent="ScrollContainer/Layout"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="StoryPicker" type="OptionButton" parent="ScrollContainer/Layout/MenuBar"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="StartButton" type="Button" parent="ScrollContainer/Layout/MenuBar"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "START"

[node name="StoryTitle" type="Label" parent="ScrollContainer/Layout/MenuBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
vertical_alignment = 1

[node name="StoryText" type="Label" parent="ScrollContainer/Layout" unique_id=2087282049]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Story textâ€¦"
autowrap_mode = 3

[node name="FeedbackText" type="Label" parent="ScrollContainer/Layout" unique_id=342467871]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "...
"
autowrap_mode = 3

[node name="CommandBar" type="HBoxContainer" parent="ScrollContainer/Layout" unique_id=963208710]
layout_mode = 2

[node name="Slot1" type="PanelContainer" parent="ScrollContainer/Layout/CommandBar" unique_id=1224793628]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("slot_panel")
script = ExtResource("1_wbfu4")
slot_index = 1
placeholder_text = "Action"

[node name="Slot1Label" type="Label" parent="ScrollContainer/Layout/CommandBar/Slot1" unique_id=401115347]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.15, 0.1, 1)
text = "Action"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot2" type="PanelContainer" parent="ScrollContainer/Layout/CommandBar" unique_id=1346960890]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("slot_panel")
script = ExtResource("1_wbfu4")
slot_index = 2
placeholder_text = "Thing"

[node name="Slot2Label" type="Label" parent="ScrollContainer/Layout/CommandBar/Slot2" unique_id=388333064]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.15, 0.1, 1)
text = "Thing"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot3" type="PanelContainer" parent="ScrollContainer/Layout/CommandBar" unique_id=711238904]
visible = false
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("slot_panel")
script = ExtResource("1_wbfu4")
slot_index = 3
placeholder_text = "Where"

[node name="Slot3Label" type="Label" parent="ScrollContainer/Layout/CommandBar/Slot3" unique_id=1683902445]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.15, 0.1, 1)
text = "Where"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InventoryText" type="Label" parent="ScrollContainer/Layout" unique_id=54929718]
layout_mode = 2
theme_override_font_sizes/font_size = 20

[node name="TileSection" type="VBoxContainer" parent="ScrollContainer/Layout"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ActionsLabel" type="Label" parent="ScrollContainer/Layout/TileSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Actions:"

[node name="ActionTray" type="FlowContainer" parent="ScrollContainer/Layout/TileSection"]
layout_mode = 2
theme_override_constants/v_separation = 10

[node name="ThingsLabel" type="Label" parent="ScrollContainer/Layout/TileSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Things:"

[node name="ThingTray" type="FlowContainer" parent="ScrollContainer/Layout/TileSection"]
layout_mode = 2
theme_override_constants/v_separation = 10

[node name="GoButton" type="Button" parent="ScrollContainer/Layout" unique_id=1845811699]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("go_normal")
theme_override_styles/hover = SubResource("go_hover")
theme_override_styles/normal = SubResource("go_normal")
theme_override_styles/pressed = SubResource("go_pressed")
text = "GO"

[node name="MenuButton" type="Button" parent="." unique_id=81561436]
layout_mode = 1
anchors_preset = 10
anchor_left = 1.0
anchor_right = 1.0
offset_left = -130.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = 60.0
grow_horizontal = 0
text = "Change Story"
